# quorum-types

./: .gitignore  Cargo.toml  LICENSE  PAPER.md  README.md  THESIS.md  WRITEUP.md
.github/workflows/: ci.yml
src/: at_least_once.rs  at_most_once.rs  attest.rs  backpressure.rs  byzantine.rs  calm.rs  causal.rs  chain.rs  commit_wait.rs  compaction.rs  consistency.rs  consistent_cut.rs  crdt.rs  cross_shard.rs  deadlock.rs  detector.rs  election.rs  escrow.rs  failover.rs  fencing.rs  fifo.rs  flex.rs  lib.rs  lockorder.rs  membership.rs  message_log.rs  occ.rs  reconcile.rs  reconfig.rs  reconfig_safety.rs  recovery_line.rs  saga.rs  send_window.rs  session.rs  sharding.rs  snapshot.rs  stability.rs  staleness.rs  suspicion.rs  term.rs  (+4 more)
tests/: attest_wire.rs  partition_heal.rs  wire_sim.rs
tla/: quorum.tla  quorum_guarded.cfg  quorum_noguard.cfg
