[package]
name = "quorum-types"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Feasibility toy: epoch-indexed complement proofs — split-brain unrepresentable at compile time. Distributed-systems generalization of warp-types."
publish = false

[dependencies]

# The library is dependency-free; these exist only for the deterministic
# network simulation in tests/wire_sim.rs (rung 5).
[dev-dependencies]
turmoil = "0.7"
tokio = { version = "1", features = ["time"] }
